# LifeEngine

./: CMakeLists.txt  gitignore
.github/workflows/: cmake-multi-platform.yml
Engine/: CMakeLists.txt
Engine/Source/: main.cpp
Engine/Source/Core/: engine.cpp  engine.h
automation/: automation.py
automation/Cmake/: CMakeHelpers.cmake
