# general info
cmake_minimum_required(VERSION 3.31.6)

#cpp options
set(CMAKE_CXX_STANDARD 20)
project(LifeExeEngine VERSION 1.0.0 )

add_executable(${PROJECT_NAME} Source/main.cpp)
set(ENGINE_SOURCES
Source/Core/engine.cpp
Source/Core/engine.h
Source/Core/pch.h
Source/Core/pch.cpp
.clang-format
)
add_library(${PROJECT_NAME}Lib ${ENGINE_SOURCES})
#where to search .h files for library
target_include_directories(${PROJECT_NAME}Lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Source  )
link_libraries(${PROJECT_NAME} ${PROJECT_NAME}Lib )

#folders
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER  Engine)
set_target_properties(${PROJECT_NAME}Lib PROPERTIES FOLDER  Engine)

include(${CMAKE_SOURCE_DIR}/Automation/CMAKE/CMakeHelpers.cmake)

create_ide_folders(ENGINE_SOURCES)
setup_precompiled_headers (${PROJECT_NAME}Lib Source/pch.cpp Source/pch.h ENGINE_SOURCES)


